Fix phantom whitespace below logo

--- a/packages/css/src/components/header/header.scss
+++ b/packages/css/src/components/header/header.scss
@@ -55,6 +55,7 @@
 
     .amsterdam-header__title-heading {
       display: block;
+      line-height: 1;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
