--- a/packages/css/src/components/logo/logo.scss
+++ b/packages/css/src/components/logo/logo.scss
@@ -5,6 +5,11 @@
 
 .amsterdam-logo {
   height: var(--amsterdam-logo-height);
+
+  // fix for phantom space below logo
+  svg {
+    display: block;
+  }
 }
 
 .amsterdam-logo__emblem {
